# nook-clone

./: .gitignore  Cargo.toml  README.md
src/: async_handler.rs  colours.rs  interactive.rs  main.rs  sites.rs  tray2.rs  widgets.rs
src/interactive/: game_selector.rs  i18evy.rs  music.rs  player.rs  rain.rs  slider.rs  topbar.rs
src/interactive/i18evy/: english.rs  german.rs  italian.rs  spanish.rs
src/sites/: custom_kk.rs  custom_town.rs  settings.rs  start.rs
src/widgets/: buttons.rs  drop_down.rs  textStyle.rs  tickbox.rs  topbar2.rs
