[package]
name = "nook-linux"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {version="0.15.2",default-features = false, features=[
  "wayland",
#   "android-game-activity",
#   "android_shared_stdcxx",
  "animation",
  "bevy_asset",
  "bevy_audio",
  "bevy_color",
  "bevy_core_pipeline",
#   "bevy_gilrs",
  "bevy_gizmos",
#   "bevy_gltf",
#   "bevy_mesh_picking_backend",
#   "bevy_pbr",
  "bevy_picking",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_sprite_picking_backend",
#   "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_ui_picking_backend",
  "bevy_window",
  "bevy_winit",
#   "custom_cursor",
#   "default_font",
#   "hdr",
  "multi_threaded",
  "png",
#   "smaa_luts",
  "sysinfo_plugin",
  "tonemapping_luts",
  "vorbis",
  "serialize",
#   "webgl2",
  "x11",]} 
bevy-inspector-egui = "0.29.1"
image = "0.25.5"
tray-icon = "0.19.2"

#[target."cfg(target_os = \"linux\")".dev-dependencies]
gtk = "0.18"
winit = "0.30.9"
chrono = "0.4.39"
bevy-tokio-tasks = "0.15.0"
reqwest = "0.12.12"
rand = "0.9.0"
# bevy-persistent = { version = "0.7.0", features = ["all"] }
# serde = {version ="1.0", features =["derive"]}
# serde_ini = { version = "0.2", optional = true }
# thiserror = { version = "2.0" }
# toml = { version = "0.8", optional = true }

# dirs = "6.0.0" 

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]
